# VideoClipSplit

./: .gitignore  README.md  build_mac.sh  build_windows.bat  main.py  pyproject.toml  test_pyqt.py  video_processor.py  视频分镜工具.spec
assrt/: icon.icns
