[project]
name = "videoclipsplit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.12.0.88",
    "opencv-python-headless>=4.12.0.88",
    "scenedetect>=0.6.7",
    "pyqt5>=5.15.9",
    "pyinstaller>=6.15.0",
]
